--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,8 @@
 spring:
+  application:
+    name: registry-service
+  profiles:
+    active: native
   datasource:
     driver-class-name: org.postgresql.Driver
     username: admin
