--- a/application.properties
+++ b/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=admin
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+spring.application.name=administration-service
+redis.host=localhost
+redis.port=6379
