--- a/application.properties
+++ b/application.properties
@@ -2,9 +2,9 @@ spring.application.name=registry-service
 spring.datasource.url=jdbc:postgresql://localhost/registry-service
 spring.datasource.username=admin
 spring.datasource.password=admin
-spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 spring.application.name=administration-service
 redis.host=localhost
 redis.port=6379
